Added endpoint responsible for adding recipes to favorites
